--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,6 @@ services:
     # image: premdevdis/requirementportal
     build: .
     container_name: requirementportalapp
-    entrypoint: ./docker-entrypoint.sh
+    entrypoint: python main.py
     ports:
-      - "8080:8085"
-    depends_on:
-      - "mongo"
-    
-  mongo:
-    image: mongo
-    restart: always
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    volumes:
-      - ./data:/data/db
+      - "80:8085"
